--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      * {
-        font-family: "Roboto", sans-serif;
-        margin: 0;
-        overflow-x: hidden;
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
+      rel="stylesheet"
+    />
+
     <title>SAM LAW - Full Stack Web Dev</title>
   </head>
   <body>
